objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Merit Review Service</fullName>
        <description>Merit Review Service Application Management Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assess</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Decision</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Online Claims Notification</fullName>
        <description>Process for all Online Claims Notification to CAS teams</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assess</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Decision</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Draft</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Require Notification Follow-up</fullName>
        </values>
        <values>
            <fullName>Review</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Attachments__c</fullName>
        <description>Count of Attachments</description>
        <label>Attachments</label>
        <summaryForeignKey>Attachment__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BriefSummaryOfOutcome__c</fullName>
        <description>MRS - Brief Summary of Outcome (if Different Reasoning to Insurer)</description>
        <inlineHelpText>Brief Summary of Outcome (if Different Reasoning to Insurer)</inlineHelpText>
        <label>Brief Summary of Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseReasons__c</fullName>
        <description>Custom Case Reasons - for field dependency on status</description>
        <label>Case Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No application for internal review made</fullName>
                </value>
                <value>
                    <fullName>Review Declined - No Work Capacity Decision</fullName>
                </value>
                <value>
                    <fullName>Review Declined - No internal review</fullName>
                </value>
                <value>
                    <fullName>Review Declined - Out of time application</fullName>
                </value>
                <value>
                    <fullName>Review Declined - Frivolous application</fullName>
                </value>
                <value>
                    <fullName>Review Declined - Vexatious application</fullName>
                </value>
                <value>
                    <fullName>Review Declined - Expired application</fullName>
                </value>
                <value>
                    <fullName>Review Withdrawn - Insurer withdrew WCD</fullName>
                </value>
                <value>
                    <fullName>Review Withdrawn - Worker withdrew MR</fullName>
                </value>
                <value>
                    <fullName>Same Decision - No new information</fullName>
                </value>
                <value>
                    <fullName>Same Decision - New information</fullName>
                </value>
                <value>
                    <fullName>Different Decision - Better for worker - No new information</fullName>
                </value>
                <value>
                    <fullName>Different Decision - Better for worker - New information</fullName>
                </value>
                <value>
                    <fullName>Different Decision - Worse for worker - No new information</fullName>
                </value>
                <value>
                    <fullName>Different Decision - Worse for worker - New information</fullName>
                </value>
                <value>
                    <fullName>No Internal review &amp; 30 days has not lapsed since application for internal review was made</fullName>
                </value>
                <value>
                    <fullName>Review Declined - Deleted draft application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClaimNumber__c</fullName>
        <description>Claim Number provided by the Insurer</description>
        <externalId>true</externalId>
        <label>Claim Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimType__c</fullName>
        <description>MRS - Claim Type</description>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On or after 01/10/12</fullName>
                </value>
                <value>
                    <fullName>Before 01/10/12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPreference__c</fullName>
        <formula>TEXT(Contact.ContactPreference__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The preferred contact method indicated by the contact on their Contact record..</inlineHelpText>
        <label>Contact Preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRSStatusFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DRS Status Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRS_ContactLastname__c</fullName>
        <description>The LastName of the Contact (ContactId) associated with the Case. The field needs to be a Text field to be used in aggregate functions.</description>
        <inlineHelpText>The LastName of the Contact (ContactId) associated with the Case. The field needs to be a Text field to be used in aggregate functions.</inlineHelpText>
        <label>Contact Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDecisionSent__c</fullName>
        <description>MRS - Date/Time decision was sent to parties (insurer/worker). Key metric used in reporting to indicate end of case lifecycle.</description>
        <inlineHelpText>The date MRS sent the decision to all parties.</inlineHelpText>
        <label>Decision Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfInjury__c</fullName>
        <description>MRS Date of Injury</description>
        <label>Date of Injury</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeCaseLodged__c</fullName>
        <description>MRS - Date/Time Case Lodged, this is is the date/time the case was submitted to MRS</description>
        <label>Date/Time Case Lodged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateWorkerReceivedIR__c</fullName>
        <description>MRS - Date Worker Received IR</description>
        <label>Date Worker  Received IR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysToDecisionSent__c</fullName>
        <formula>IF( 
NOT( ISBLANK(DecisionDate__c)) , 
(DecisionDate__c -  DATEVALUE( DateTimeCaseLodged__c) ), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days it has taken from Date/Time Lodged to Decision Date.</inlineHelpText>
        <label>Days to Decision Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecisionDate__c</fullName>
        <description>MRS Application Decision Date</description>
        <inlineHelpText>The date MRS made decision.</inlineHelpText>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoNotPublish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The option selected by the worker on submission of the Case Item whether to publish the decision or not.</description>
        <inlineHelpText>The option selected by the worker on submission of the Case Item whether to publish the decision or not.</inlineHelpText>
        <label>Do Not Publish?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by a Batch Job to indicate if another record/s are found that meet the criteria.</description>
        <label>Duplicate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateStatus__c</fullName>
        <description>This field is managed by users to indicate which records have been data quality checked. are considered clean or not after data checks have commenced.</description>
        <label>Duplicate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Duplicate_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IRDecision__c</fullName>
        <description>MRS - IR Decision</description>
        <label>IR Decision Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRLodged__c</fullName>
        <description>MRS - IR Lodged</description>
        <label>Date IR Application Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Insurer Account Name</description>
        <label>Insurer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRSCaseNumber__c</fullName>
        <formula>HYPERLINK(&quot;https://regdev2-dfsi--regdev2.cs6.force.com/insurerlegal/s/casedetail?recordId=&quot; &amp;  Id , CaseNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRS Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRSInsurerAccount__c</fullName>
        <description>MRS Insurer Account for Sharing rules</description>
        <label>MRS Insurer Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotAWorkCapacityDecision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WDC Decision Type Not a Work Capacity Decision</description>
        <label>Not a Work Capacity Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PeerReviewComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS peer review complete indicator - checked = yes unchecked = no</description>
        <label>Peer Review Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContactName__c</fullName>
        <formula>PrimaryContact__r.FirstName + &apos; &apos; + PrimaryContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactPublicEmail__c</fullName>
        <formula>PrimaryContact__r.PublicEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Public Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactPublicPhone__c</fullName>
        <formula>PrimaryContact__r.PublicPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Public Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displayed in DRS Communities, Including User.PublicPhone__C and User.PublicEmail__C</description>
        <inlineHelpText>The Primary Contact for external parties.</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_w_Primary_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReplyToDateReceived__c</fullName>
        <description>MRS - Insurer Reply to Date Received</description>
        <label>Reply to Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepresentativeType__c</fullName>
        <description>Representative Type</description>
        <inlineHelpText>This is the Representative as submitted on the Application. To see who submitted the form, look at the Created By field.</inlineHelpText>
        <label>Representative Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Union</fullName>
                </value>
                <value>
                    <fullName>Worker Advocate</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S43AWorkCapacity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WCD Decision Type S43A - Work Capacity</description>
        <inlineHelpText>S43A - Work Capacity</inlineHelpText>
        <label>S43A Work Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S43BSuitableEmployment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WDC Decision Type S43B - Suitable Employment</description>
        <inlineHelpText>S43B - Suitable Employment</inlineHelpText>
        <label>S43B Suitable Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S43CAmountEarntInSE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WDC Decision Type S43C - Amount earnt in SE</description>
        <inlineHelpText>S43C - Amount earnt in SE</inlineHelpText>
        <label>S43C Amount earnt in SE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S43D1PIAWE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WDC Decision Type S43D1 - PIAWE</description>
        <inlineHelpText>S43D1 - PIAWE</inlineHelpText>
        <label>S43D1 PIAWE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S43D2CurrentWeeklyEarnings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WDC Decision Type S43D2 Current Weekly Earnings</description>
        <inlineHelpText>S43D2 - Current Weekly Earnings</inlineHelpText>
        <label>S43D2 Current Weekly Earnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S43EUnableToEngageInCertainEmploy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WDC Decision Type S43E - Inability to engage in certain employment</description>
        <inlineHelpText>S43E - Inability to engage in certain employment</inlineHelpText>
        <label>S43E Unable to engage in certain employ.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S43FAnyOtherWeeklyPaymentsDecision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MRS - WDC Decision Type S43F - Any other weekly payments decision</description>
        <inlineHelpText>S43F - Any other weekly payments decision</inlineHelpText>
        <label>S43F Any other weekly payments decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopicFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field helps users to find the Cases that do not have a Topic assigned to them. The field is checked and unchecked through a trigger on Case Assignment object.</description>
        <inlineHelpText>The field helps users to find the Cases that do not have a Topic assigned to them. The field is checked and unchecked through a trigger on Case Assignment object.</inlineHelpText>
        <label>Topic Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WCDNoticeDate__c</fullName>
        <description>MRS - WCD Notice Date</description>
        <label>WCD Notice Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <roleAndSubordinates>DRS_Director</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ClaimNumber__c</columns>
        <columns>Insurer__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>DateTimeCaseLodged__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Merit_Review_Service_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ClaimNumber__c</columns>
        <columns>Insurer__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>DateTimeCaseLodged__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Queue</filterScope>
        <label>Merit Review Service Queue</label>
        <queue>Merit_Review_Service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ClaimNumber__c</columns>
        <columns>Insurer__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>DateTimeCaseLodged__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ClaimNumber__c</columns>
        <columns>Insurer__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>DateTimeCaseLodged__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Sample_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Sample Cases</value>
        </filters>
        <label>Sample Cases</label>
    </listViews>
    <listViews>
        <fullName>Trial_Activities</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Trial</value>
        </filters>
        <label>Trial Activities</label>
    </listViews>
    <recordTypes>
        <fullName>Merit_Review_Service</fullName>
        <active>true</active>
        <businessProcess>Merit Review Service</businessProcess>
        <description>Merit Review Service (Do not change name, referenced in Process)</description>
        <label>Merit Review Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Change_Validate_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Status, &quot;Validate&quot;),$Profile.Id = &quot;00eN0000000I7lM&quot;)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Please close all your outstanding tasks to proceed to the next stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DRS_CompleteDecision</fullName>
        <active>true</active>
        <description>When Case Status is updated to Decision, ensure that Decision Date and Outcome fields are complete.</description>
        <errorConditionFormula>IF( RecordType.DeveloperName = &quot;Merit_Review_Service&quot;,

IF(ISPICKVAL(Status, &quot;Decision&quot;), 
AND(
OR(
 ISBLANK( BriefSummaryOfOutcome__c ) ,
 ISBLANK( DecisionDate__c ) 
)
)
, False)
,False
)</errorConditionFormula>
        <errorMessage>Please ensure you have completed the fields &apos;Brief Summary of Outcome&apos; and &apos;Decision Date&apos; in the MRS Decision section before updating the Case to Decision.</errorMessage>
    </validationRules>
</CustomObject>